--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.8</version>
+		<version>2.7.9</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.trinitysolucoes.fastdelivery.geocode</groupId>
-	<artifactId>fastdelivery-geocode</artifactId>
+	<groupId>br.com.codigio.api</groupId>
+	<artifactId>cep</artifactId>
 	<version>1.0.0</version>
-	<name>cep-api</name>
+	<name>cep</name>
 	<description>Serviço de consulta de CEP.</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -52,18 +52,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-	<profiles>
-		<profile>
-			<id>prod</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<properties>
-				<spring.profiles.active>prod</spring.profiles.active>
-			</properties>
-		</profile>
-	</profiles>
 
 	<build>
 		<plugins>
