:art: Atualiza o IP.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,14 @@
 #-----------------------------------------
 #-----------------------------------------
 spring.application.name=CEP API
+server.port=9081
 
 #-----------------------------------------
 # DATASOURCE
 #-----------------------------------------
 #-----------------------------------------
-spring.datasource.url=jdbc:postgresql://localhost:5432/api-cep
-spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://62.171.187.41:5432/api-cep
+spring.datasource.username=api
+spring.datasource.password=7227&4BUas&l
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
